# tsim_demos

./: pyproject.toml
circuits/: msc_3.stim  msd_5.stim  star_d5.stim  star_d7.stim  star_d9.stim
demos/: bloqade_integration.ipynb  clifford_sampling.ipynb  intro.ipynb  msc.py  msd.ipynb  overview.ipynb  sinter_compatibility.ipynb  zx_detector_error_models.ipynb  zx_seminar_demo.ipynb  zx_stabilizer_rank_decomposition.ipynb
draft/: bloqade_integration.ipynb  intro.ipynb  msd.ipynb  overview.ipynb  sinter_compatibility.ipynb  zx_stabilizer_rank_decomposition.ipynb
