[project]
name = "tsim-demos"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "black[jupyter]>=26.1.0",
    "bloqade-circuit>=0.11.0",
    "bloqade-tsim @ git+https://github.com/QuEraComputing/tsim.git@rafaelha/zx_seminar_demo",
    "ipykernel>=7.1.0",
    "isort[jupyter]>=7.0.0",
    "py-spy>=0.4.1",
    "pyright>=1.1.408",
]
